# dicectf-quals-2024-challenges

./: README.md
crypto/dicenet/: Dockerfile  challenge.yaml  run.sh
crypto/iinversion/: .gitignore  Dockerfile  challenge.yml  flag.txt  private.key  solve_remote.py
crypto/inversion/: .gitignore  Dockerfile  challenge.yml  flag.txt  solve_remote.py
crypto/mea-shor-ment/: challenge.yml  flag.txt  privatekey.pem
crypto/pee-side/: Dockerfile  challenge.yaml  flag.txt  run.sh
crypto/rps-casino/: Dockerfile  challenge.yml  flag.txt  solve.sage
crypto/winter/: Dockerfile  challenge.yml  flag.txt  solve.py
crypto/yaonet/: Dockerfile  challenge.yml  flag.txt  id_ecdsa_original  server.py  solve.py
misc/diligent-auditor/: challenge.yml  flag-e639626913ad08d1.txt  solve.txt
misc/floordrop/: README.md  challenge.yaml  docker-compose.yml
misc/irs/: challenge.yml  flag.txt  solve.py
misc/spellbound/: README.md  challenge.yaml
misc/survey/: challenge.yaml
misc/unipickle/: Dockerfile  challenge.yml  flag.txt  solution.py
misc/welcome/: challenge.yaml
misc/what-a-jpeg-is/: challenge.yaml
misc/zshfuck/: Dockerfile  challenge.yml  getflag  getflag.c  zshfuck.py
pwn/baby-talk/: challenge.yml
pwn/boogie-woogie/: challenge.yml  new_solve.py  solve.py
pwn/coooorcpu/: challenge.yml  coooorcpu.rar  flag.txt  regression1.rom  regression2.rom  regression3.rom  regression4.rom  regression5.rom  solve.rom
pwn/cooorcpu/: challenge.yml  flag.txt  run.sh  solve.rom
pwn/dicediceotter/: challenge.yaml
pwn/hop/: README.md  challenge.yml
rev/dicequest/: challenge.yml
rev/dicequest/src/: .gitignore  Cargo.toml  gen_coords.py
rev/dicequest/src/src/: animated_sprite.rs  combat.rs  dragon.rs  generated_coords.rs  main.rs  money.rs  regen.rs
rev/neurotic/: challenge.yml
rev/pain-plus-plus/: challenge.yml  flag-generator.py
rev/scrambled-up/: challenge.yml
rev/scrambled-up/src/harness/: .clang-format  .gitignore  CMakeLists.txt
rev/scrambled-up/src/harness/src/: core.h  gen.c  loader.h  main.c  nodes.h  util.h
rev/scrambled-up/src/harness/src/modules/: add.c  and.c  get_flag_char.c  interface.h  maze.c  not.c  or.c  pshufb.c  xor.c
(+153 files in other folders)
